--- a/brewary.html
+++ b/brewary.html
@@ -14,6 +14,7 @@
 	<!-- SITE TITLE -->
 	<title>brewARy</title>
 
+
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
@@ -26,13 +27,20 @@
 	<link rel="stylesheet" href="css/nivo-lightbox.css">
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amiko&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:400,700|Playfair+Display|Rubik&display=swap" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+
 
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
-	<!-- navigation section -->
 	<section id= "navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
@@ -45,32 +53,36 @@
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html#work">work</a></li>
-					<li><a href="index.html#about">about</a></li>
+					<li><a href="index.html#work">Work</a></li>
+					<li><a href="index.html#about">About</a></li>
 					<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
 				</ul>
 			</div>
 		</div>
 	</section>
 
-<section id="about">
+
+<section id="overview">
 	<div class="container">
+			<div class="content">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 text-center">
-				<h1 class="headingtitle bold">brewARy</h1>
-				<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Augmented Reality App</h5>
+				<p class="title bold">brewARy</p>
+				<h4 class="normal" style="font-family: 'Quicksand', sans-serif;">Augmented Reality App - Google Cardboard</h4>
+				<h4 class="normal" style="font-family: 'Quicksand', sans-serif;">Nov 2019 </h4>
 			</div>
 		</div>
 	</div>
+</div>
 </section>
 
 <!-- home section -->
-	<section id="brewary">
-		<div class="container">
-			<div class="row">
-			</div>
+<section id="brewary">
+	<div class="container">
+		<div class="row">
 		</div>
-	</section>
+	</div>
+</section>
 
 	<div class="progress-wrap">
 		<svg class="progress-circle" width="100%" height="100%" viewBox="-1 -1 102 102">
@@ -78,144 +90,155 @@
 		</svg>
 	</div>
 
-
-	<section id="about">
+	<section id="section">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-						<h4 class="subheading">Role</h4>
-							<p>AR Designer, Nov 2019<br><br>
-							</p>
-
-					</p>
-					</div>
-
-				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-						<h4 class="subheading">Tools</h4>
-						<p>Unity, Vuforia</p>
-					</div>
-			</div>
-			<div class= "row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4 class="subheading">Project Context</h4>
-					<p>I created an augmented reality app that can be used during a brewery tour.<br>
-					My app is capable of two interactions:
-					<li>Recognize a beer can and display information about that beer</li>
-					<li>Recognize people's IDs and calculate if someone is of age to purchase alcohol</li><br><br><br>
-						<br>
-				</div>
-			</div>
-		</section>
-
-		<section class="graybg">
-			<div class="container">
+			<div class="content">
 				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-										<br><br><br><h3 >PROBLEM STATEMENT</h3>
-									</div>
-									<div class="col-lg-12 col-md-12 col-sm-12">
-											<p>Beer making is an ancient and storied tradition. However in the United States for many decades it was reduced to purchasing Coors and Bud light in 12-packs at the grocery store. Thankfully, the tide has turned and an appreciation for the variety and nuance of the beverage has returned to rival the connoisseurship of wine. The AR app BrewARy is a tool for purveyors of beer to introduce their product and facilite it to consumers.<br><br><br><br></p>
-										</div>
-										<div>
-		</section>
+
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h3>OVERVIEW</h3>
+	<p class="mont">BrewARy is an augmentrd reality app that can enhance people's experience during a brewary tour
+	</p><br>
+		</div>
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+			<h3>CONTRIBUTIONS</h3>
+			<p>Two interactions that can be triggered by beer can and people's ID using Unity + Vuforia<br><br>
+	</div>
+	</div>	</div>
 
 	</section>
-	<section>
+
+
+	<section id="graybg">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-									<br><br><br><h3 >WHY AR?</h3>
-								</div>
-								<div class="col-lg-12 col-md-12 col-sm-12">
-										<p>	An augmented reality experience during a brewery tour has the opportunity to provide more ways to interact with the products and setting than a regular tour without the AR app. A visitor's experience is no longer limited to physical interactions but now includes digital ones as well.<p>
-											<li>AR interactions can help skip tedious tasks to achieve a goal because a quick recognition can trigger interactions. </li>
-											<li>An AR experience is never meant to replace a user's reality but rather enhance it.</li>
-									<br><br><br><br></p>
-									</div>
-									<div>
+			<div class="content">
+				<div class="row">
+
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h3>MOTIVATION</h3>
+	<p class="mont">There is an increasing trend of appreciation for beer making that is rivaling the connoisseurship of wine
+	</p><br><br>
+		</div>
+	</div>
+		</div>
+
 	</section>
 
-		<section class="graybg">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-										<br><br><br><h3>IDEATION: PHYSICAL PROTOTYPING</h3>
-									</div>
-									<div class="col-lg-12 col-md-12 col-sm-12">
-										<p>We decided to begin with transparencies and templates for physical prototyping. Sketching and physically prototyping our virtual reality experience helped us narrow our scope by giving us an idea about what parts of the environment and what kinds of interactions will be absolutely necessary to address our problem.</p><br>
-										<h4> Main Takeaways</h4>
-										<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Included Interactions</h5>
-										<li>Recognize a beer can and display information about that beer</li>
-										<li>Recognize people's IDs and calculate if someone is of age to purchase alcohol</li><br>
-										<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Why these interactions?</h5>
-										<p>I wanted to decrease the time it takes to search up information about interesting beers online and increase the time spent with the products, the beers, themselves during the tour. Additionally, age is a sensitive topic for many. I wanted to create an AR experience where someone's age did not have to be exposed but a bartender could still make sure that the consumer was of age to purchase alcohol.</p><br>
-<iframe width="853" height="480" src="https://www.youtube.com/embed/-TDmgNU3OXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-										<br><br><br><br></p>
-										</div>
-										<div>
-		</section>
-
-		<section id="about">
-				<div class="container">
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-						<h3>CONSIDERATIONS FOR DIGITAL PROTOTYPING</h3>
-						<br>
-						<p>AR apps are meant to enhance the experience and not replace it. The app needs to work together with the real-physical environment instead of working independently with no consideration for the environment. </p>
-						<li>Make sure the AR interaction has a reason for it being AR and not the usual 2D interaction.</li>
-						<li>Consider the usefulness of each interaction. Is it just for fun or does the interaction actually have a use?</li>
-							<br>
-	  					<br>
-	  					<br><br>
-	  					<br></div>
-					</div>
-				</div>
-		</section>
-
-<!-- team section -->
-	<section class="graybg">
+	<section id="section">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-					<br><br><br>
-        	<h3> DELIVERABLE: VIDEO OF FINAL DIGITAL PROTOTYPE</h3><br>
-      	</div>
+			<div class="content">
+				<div class="row">
+
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h3>WHY AUGMENTED REALITY?</h3>
+	<p class="mont">AR experiences allow for people to be no longer limited to just physical interactions but allows for digital interations as well
+	</p><br><br>
+		</div>
+	</div>
+		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12">
-				<p>The final prototype was built using Unity and Vuforia.</p><br>
-<iframe width="853" height="480" src="https://www.youtube.com/embed/SMMWtcW10u4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>				<br><br><br><br></p>
+				<li>AR interactions can help skip tedious tasks to achieve a goal because a quick recognition can trigger interactions.</li>
+				<li>An AR experience is never meant to replace a user's reality but rather enhance it.</li>
+		</p></div>
+	</div>	</div>
+
+	</section>
+
+	<section id="graybg">
+		<div class="container">
+			<div class="content">
+				<div class="row">
+
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h3>IDEATION</h3>
+	<p class="mont">We decided to begin physical prototyping with transparencies and paper templates
+	</p><br><br>
+		</div>
+	</div>
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<h4> Main Takeaways</h4>
+				<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Included Interactions</h5>
+				<li>Recognize a beer can and display information about that beer</li>
+				<li>Recognize people's IDs and calculate if someone is of age to purchase alcohol
+</li>
+				<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Why these interactions?</h5>
+				<p>I wanted to decrease the time it takes to search up information about interesting beers online and increase the time spent with the products, the beers, themselves during the tour. Additionally, age is a sensitive topic for many. I wanted to create an AR experience where someone's age did not have to be exposed but a bartender could still make sure that the consumer was of age to purchase alcohol. </p><br>
+				<iframe width="853" height="480" src="https://www.youtube.com/embed/-TDmgNU3OXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<br><br><br><br></p>
 				</div>
 				<div>
-		</div>
+	</div>	</div>
+
 	</section>
 
-								             <div class="padding">
-								               <div class="container">
-																 <div class="row">
-																 <div class="col-lg-12 col-md-12 col-sm-12">
-								                     <h3><br><br>MAIN TAKEAWAYS</h3><br>
-								                   </div>
-																	 <div class="col-lg-12 col-md-12 col-sm-12">
-															 				<p>1.AR is meant to work with the environment to provide an experience.</p>
-																			<p>2. Make sure the interactions necessitate them being in AR.</p>
-								                   </div>
-								               </div>
-								             </div>
-													 </section>
+
+	<section id="section">
+		<div class="container">
+			<div class="content">
+				<div class="row">
+
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h3>DIGITAL PROTOTYPING</h3>
+	<p class="mont">AR apps are meant to enhance the experience so make sure the app is working together with the real-physical environment instead of working independently with no consideration for the environment
+	</p><br><br>
+		</div>
+	</div>
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<li>Make sure the AR interaction has a reason for it being AR and not the usual 2D interaction.</li>
+				<li>Consider the usefulness of each interaction. Is it just for fun or does the interaction actually have a use?</li>
+		</p></div>
+	</div>	</div>
+
+	</section>
 
 
-													 <footer>
- 														<div class="container">
- 															<div class="row">
- 																<div class="col-md-12 col-sm-12">
- 																	<ul class="social-icon">
- 																		<li><a target="_blank" href="https://www.linkedin.com/in/mkimdesign/" class="fa fa-linkedin wow bounceIn" data-wow-delay="0.9s"></a></li>
- 																		<li><a target="_blank" href="https://github.com/kminjin" class="fa fa-github wow bounceIn" data-wow-delay="0.9s"></a></li>
- 																	</ul>
- 																</div>
- 															</div>
- 														</div>
- 													</footer>
+	<section id="graybg">
+		<div class="container">
+			<div class="content">
+				<div class="row">
+
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h3>FINAL DELIVERABLE</h3>
+	<p class="mont">Prototyping with Unity + Vuforia
+	</p><br><br>
+		</div>
+	</div>
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12">
+					<p>Although I started with Unity, for the final project, we decided to use A-Frame because A-Frame was much more friendly to designers without an intense programming background. For Unity, I had to learn C# for over a week to be able to code a simple interaction, but to protoype in A-Frame, the only required language was html and javascript.</p><br>
+					<iframe width="853" height="480" src="https://www.youtube.com/embed/SMMWtcW10u4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>				<br><br><br><br></p>
+
+				</div>
+				<div>
+	</div>	</div>
+
+	</section>
+
+
+	<section id="section">
+			<div class="container">
+				<div class="content">
+					<div class="row">
+					 <div class="col-md-12 col-sm-12">
+						 <h3>REFLECTION</h3>
+						 <p class="mont">What I learned</p>
+						 </div>
+					 </div>
+					 <br>
+						 <div class="row">
+							<div class="col-lg-12 col-md-12 col-sm-12">
+								<p>AR is meant to work with the environment to provide an experience.</p><br>
+								<p>Make sure the interactions necessitate them being in AR.</p><br>
+
+					</div>
+				</div>
+			 </section>
+
+
 
 <!-- JAVASCRIPT JS FILES -->
 <script src="js/jquery.js"></script>
