--- a/garden.html
+++ b/garden.html
@@ -26,13 +26,20 @@
 	<link rel="stylesheet" href="css/nivo-lightbox.css">
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amiko&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:400,700|Playfair+Display|Rubik&display=swap" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+
 
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
-	<!-- navigation section -->
 	<section id= "navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
@@ -45,23 +52,27 @@
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html#work">work</a></li>
-					<li><a href="index.html#about">about</a></li>
+					<li><a href="index.html#work">Work</a></li>
+					<li><a href="index.html#about">About</a></li>
 					<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
 				</ul>
 			</div>
 		</div>
 	</section>
 
-<section id="about">
+
+<section id="overview">
 	<div class="container">
+			<div class="content">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 text-center">
-				<h1 class="headingtitle bold">VR Garden</h1>
-				<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Virtual Reality App - Google Cardboard</h5>
+				<p class="title bold">VR Garden</p>
+				<h4 class="normal" style="font-family: 'Quicksand', sans-serif;">Virtual Reality App - Google Cardboard</h4>
+				<h4 class="normal" style="font-family: 'Quicksand', sans-serif;">Oct 2019 </h4>
 			</div>
 		</div>
 	</div>
+</div>
 </section>
 
 <!-- home section -->
@@ -78,150 +89,168 @@
 		</svg>
 	</div>
 
-	<section id="about">
+	<section id="section">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-						<h4 class="subheading">Team & Roles</h4>
-							<p><mark>Michelle Kim</mark> <span style="font-family: 'Quicksand', sans-serif;"><mark>Gaze/fuse triggered rotating watering jug interaction</mark></span><br>
-								Kara Dailey<br>
-								Caitlin Helgesen<br>
-								Corbet Griffith<br>
-								Chance Murphy<br>
-								Adrienne Royce<br><br>
-							</p>
-
-					</p>
-					</div>
-
-				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-						<h4 class="subheading">Tools</h4>
-						<p>A-Frame, Javascript, Unity, C#</p>
-					</div>
-			</div>
-			<div class= "row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4 class="subheading">Project Context</h4>
-					<p> During Oct 2019, for a course project, my team created a virtual reality app that can be experienced through Google Cardboard. Each team member was responsible for a different part of the application. My role is highlighted above. If you want to skip the process, the video of the final prototype can be found <a href="#video">here</a>.<br><br><br>
-						<br>
-				</div>
-			</div>
-		</section>
-
-		<section class="graybg">
-			<div class="container">
+			<div class="content">
 				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-										<br><br><br><h3 >PROBLEM STATEMENT</h3>
-									</div>
-									<div class="col-lg-12 col-md-12 col-sm-12">
-											<p>	16 million children in America are struggling with hunger and obesity coupled with poor nutrition remains at epidemic proportions (NGA). <p>
-												<li>Gardening can bring nutritional foods to families living in food deserts.</li>
-												<li>Gardening is cheaper than going to the grocery markets to buy fresh or organic produce.</li>
-										<br><br><br><br></p>
-										</div>
-										<div>
-		</section>
-		<section>
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-										<br><br><br><h3 >WHY VR?</h3>
-									</div>
-									<div class="col-lg-12 col-md-12 col-sm-12">
-											<p>	A virtual reality experience has the opportunity to breach an informational gap in learning how to garden.<p>
-												<li>Provide a low stakes environment to replicate and test variables in a home garden without doing physical damage to actual plants or wallets of its users.</li>
-												<li>The immersive nature of VR will help users consider if gardening can realistically be adopted into their everyday life.</li>
-										<br><br><br><br></p>
-										</div>
-										<div>
-		</section>
 
-		<section class="graybg">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-										<br><br><br><h3>IDEATION: PHYSICAL PROTOTYPING</h3>
-									</div>
-									<div class="col-lg-12 col-md-12 col-sm-12">
-										<p>We decided to begin with 360 grid paper templates and modeling clay for physical prototyping. Sketching and physically prototyping our virtual reality experience helped us narrow our scope by giving us an idea about what parts of the environment and what kinds of interactions will be absolutely necessary to address our problem.</p><br>
-										<h4> Main Takeaways</h4>
-										<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Included Interactions</h5>
-										<li>Gaze/fuse triggered rotating watering can</li>
-										<li>Gaze/fuse triggered shovel interaction</li>
-										<li>Picking of tomatoes</li><br>
-										<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Why these interactions?</h5>
-										<p>Our VR app was meant to be as realistic as possible and we wanted to educate users on how often or how much specific plants need to be watered. We wanted to include a shoveling interaction because preparing soil is also standard for all gardening and we wanted to convey that. </p><br>
-												<iframe width="853" height="480" src="https://www.youtube.com/embed/-8hybQt8TqQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-										<br><br><br><br></p>
-										</div>
-										<div>
-		</section>
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h3>OVERVIEW</h3>
+	<p class="mont">VR Garden is a virtual reality app meant to encourage users to learn about and practice gardening
+	</p><br>
+		</div>
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-		<section id="about">
-				<div class="container">
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-						<h3>CONSIDERATIONS FOR DIGITAL PROTOTYPING</h3>
-						<br>
-						<p>VR experiences aim to replace users' current realities. So Increase immersion by helping users feel they are in control, have autonomy, and aid them in establishing a successful presence in the VR world.</p>
-						<li>Involve realistic lighting and sounds to entertain users' senses.</li>
-						<li>Make the VR interactions meet user expectations (interactions are predictable and believable).</li>
-							<br>
-	  					<br>
-	  					<br><br>
-	  					<br></div>
-					</div>
-				</div>
-		</section>
+			<h3>CONTRIBUTIONS</h3>
+			<p>Gaze/fuse triggered rotating watering jug interaction using A-Frame + Javascript & Unity + C#<br><br>
+	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-<!-- team section -->
-	<section id="video" class="graybg">
+		<h3>TEAM</h3>
+		<p>Kara Dailey, Caitlin Helgesen, Corbet Griffith, Chance Murphy, Adrienne Royce<br><br><br>
+</div>
+	</div>	</div>
+
+	</section>
+
+
+	<section id="graybg">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-					<br><br><br>
-        	<h3> DELIVERABLE: VIDEO OF FINAL DIGITAL PROTOTYPE</h3><br>
-      	</div>
+			<div class="content">
+				<div class="row">
+
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h3>MOTIVATION</h3>
+	<p class="mont">16 million children in America are struggling with hunger and obesity coupled with poor nutrition remains at epidemic proportions
+	</p><br><br>
+		</div>
+	</div>
+		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12">
-				<p>Although I started with Unity, for the final project, we decided to use A-Frame because A-Frame was much more friendly to designers without an intense programming background. For Unity, I had to learn C# for over a week to be able to code a simple interaction, but to protoype in A-Frame, the only required language was html and javascript.</p><br>
-			<iframe width="853" height="480" src="https://www.youtube.com/embed/tPkEyEUiCBk?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<li>Gardening can bring nutritional foods to families living in food deserts.</li>
+										<li>Gardening is cheaper than going to the grocery markets to buy fresh or organic produce.</li>
+		</p></div>
+	</div>	</div>
+
+	</section>
+
+
+	<section id="section">
+		<div class="container">
+			<div class="content">
+				<div class="row">
+
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h3>WHY VIRTUAL REALITY?</h3>
+	<p class="mont">A VR experience has the opportunity to breach an informational gap in learning how to garden
+	</p><br><br>
+		</div>
+	</div>
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<li>Provide a low stakes environment to replicate and test variables in a home garden without doing physical damage to actual plants or wallets of its users.</li>
+				<li>The immersive nature of VR will help users consider if gardening can realistically be adopted into their everyday life.</li>
+		</p></div>
+	</div>	</div>
+
+	</section>
+
+	<section id="graybg">
+		<div class="container">
+			<div class="content">
+				<div class="row">
+
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h3>IDEATION</h3>
+	<p class="mont">We decided to begin with 360 grid paper templates and modeling clay for physical prototyping
+	</p><br><br>
+		</div>
+	</div>
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<h4> Main Takeaways</h4>
+				<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Included Interactions</h5>
+				<li>Gaze/fuse triggered rotating watering can</li>
+				<li>Gaze/fuse triggered shovel interaction</li>
+				<li>Picking of tomatoes</li><br>
+				<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Why these interactions?</h5>
+				<p>Our VR app was meant to be as realistic as possible and we wanted to educate users on how often or how much specific plants need to be watered. We wanted to include a shoveling interaction because preparing soil is also standard for all gardening and we wanted to convey that. </p><br>
+						<iframe width="853" height="480" src="https://www.youtube.com/embed/-8hybQt8TqQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<br><br><br><br></p>
 				</div>
 				<div>
-		</div>
+	</div>	</div>
+
 	</section>
 
-								             <div class="padding">
-								               <div class="container">
-																 <div class="row">
-																 <div class="col-lg-12 col-md-12 col-sm-12">
-								                     <h3><br><br>MAIN TAKEAWAYS</h3><br>
-								                   </div>
-																	 <div class="col-lg-12 col-md-12 col-sm-12">
-															 				<p>1. Design for probabilistic areas of user attention based on ergonomic data because designers cannot control what the audience is seeing.</p>
-																			<p>2. Ensure that users feel they are in control because VR experiences usually involve a lot of physical movement and therefore stability should be a priority otherwise there can be multiple negative physical reactions such as motion sickness.</p>
-								                   <p>3. A basic understanding coding languages, especially HTML, CSS, and Javascript is required for AFrame in order to create elements. </p>
-								                   <p>4. Learning how to position elements on a 3D axis for a virtual reality environment rather than a 2D web page or application is important.</li>
-								                   </div>
-								               </div>
-								             </div>
-													 </section>
+
+	<section id="section">
+		<div class="container">
+			<div class="content">
+				<div class="row">
+
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h3>DIGITAL PROTOTYPING</h3>
+	<p class="mont">Replace users' current realities by increasing immersion: help users feel they are in control, have autonomy, and aid them in establishing a successful presence in the VR world
+	</p><br><br>
+		</div>
+	</div>
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<li>Involve realistic lighting and sounds to entertain users' senses.</li>
+				<li>Make the VR interactions meet user expectations (interactions are predictable and believable).</li>
+		</p></div>
+	</div>	</div>
+
+	</section>
 
 
-													 <footer>
- 														<div class="container">
- 															<div class="row">
- 																<div class="col-md-12 col-sm-12">
- 																	<ul class="social-icon">
- 																		<li><a target="_blank" href="https://www.linkedin.com/in/mkimdesign/" class="fa fa-linkedin wow bounceIn" data-wow-delay="0.9s"></a></li>
- 																		<li><a target="_blank" href="https://github.com/kminjin" class="fa fa-github wow bounceIn" data-wow-delay="0.9s"></a></li>
- 																	</ul>
- 																</div>
- 															</div>
- 														</div>
- 													</footer>
+	<section id="graybg">
+		<div class="container">
+			<div class="content">
+				<div class="row">
 
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h3>FINAL DELIVERABLE</h3>
+	<p class="mont">Prototyping on A-Frame
+	</p><br><br>
+		</div>
+	</div>
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12">
+					<p>Although I started with Unity, for the final project, we decided to use A-Frame because A-Frame was much more friendly to designers without an intense programming background. For Unity, I had to learn C# for over a week to be able to code a simple interaction, but to protoype in A-Frame, the only required language was html and javascript.</p><br>
+				<iframe width="853" height="480" src="https://www.youtube.com/embed/tPkEyEUiCBk?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+				</div>
+				<div>
+	</div>	</div>
+
+	</section>
+
+
+	<section id="section">
+			<div class="container">
+				<div class="content">
+					<div class="row">
+					 <div class="col-md-12 col-sm-12">
+						 <h3>REFLECTION</h3>
+						 <p class="mont">What I learned</p>
+						 </div>
+					 </div>
+					 <br>
+						 <div class="row">
+							<div class="col-lg-12 col-md-12 col-sm-12">
+								<p>Design for probabilistic areas of user attention based on ergonomic data because designers cannot control what the audience is seeing.</p><br>
+								<p>Ensure that users feel they are in control because VR experiences usually involve a lot of physical movement and therefore stability should be a priority otherwise there can be multiple negative physical reactions such as motion sickness.</p><br>
+						 <p>A basic understanding coding languages, especially HTML, CSS, and Javascript is required for AFrame in order to create elements. </p><br>
+						 <p>Learning how to position elements on a 3D axis for a virtual reality environment rather than a 2D web page or application is important.</p><br>
+
+					</div>
+				</div>
+			 </section>
+
+
+								           
 <!-- JAVASCRIPT JS FILES -->
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
