--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/nivo-lightbox.css">
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/styleindex.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
@@ -36,6 +36,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Arimo&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -70,113 +71,115 @@
 			<div class="row">
 				<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
 				</div>
-					<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+					<!-- <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 					<h5 class= "introduction-text text-center gelasio" >Design work by a product thinking designer who loves details and thrives in ambiguity.</h5>
-					</div>
+					</div> -->
 					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
 					</div>
 			</div>
 		</div>
 	</section>
 
-<!-- Portfolio Section -->
-<section id="work">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12">
-				<!-- Filtering -->
-				<ul class="filter-wrapper clearfix amiko">
-            <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
-            <li><a href="#" class="opc-main-bg" data-filter=".design">DESIGN</a></li>
-            <li><a href="#" class="opc-main-bg" data-filter=".research">RESEARCH</a></li>
-            <li><a href="#" class="opc-main-bg" data-filter=".arvr">AR&VR</a></li>
-				</ul>
-  			<div class="wow fadeIn" data-wow-delay="0.4s">
-        	<div class="iso-box-wrapper col4-iso-box">
-						<div class="iso-box design col-lg-4 col-md-4 col-sm-4 col-xs-12" id="pvegout">
-            	<a href="vegout.html" data-lightbox-gallery="portfolio-gallery"><img src="images/vegouttransparent.png" alt="Veg Out">
-							<div class="selectedprojects-des">
-								<h2 class="bold">VEG OUT</h2>
-								<h4>Passion Project | Product Design</h4>
-							</div>
-							</a>
-						</div>
-						<div class="iso-box design research col-lg-4 col-md-4 col-sm-4 col-xs-12" id="ppawls">
-			 				<a href="pawls.html" ><img src="images/pawls.png" alt="Veg Out">
-			 				<div class="selectedprojects-des">
-								<h2 class="bold">PAWLS</h2>
-								<h4>Course Project | Product Design</h4>
-							</div>
-							</a>
-						</div>
-						<!-- lexmark -->
-						<div class="iso-box design col-lg-4 col-md-4 col-sm-4 col-xs-12" id="plexmark">
-							<a href="lexmark.html" ><img src="images/lexmarktransparent.png" alt="Veg Out">
-							<div class="selectedprojects-des">
-			 					<h2 class="bold ">LEXMARK</h2>
-			 					<h4>Internship | UX Design</h4>
-		 					</div>
-							</a>
-	 					</div>
+
+	<section class="work">
+								<div class="row">
+									<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+										<div class="project">
+											<h1 class="number">01</h1>
+											<h1>VEG OUT</h1>
+											<p>Helping People Reduce Their Meat Intake</p>
+											<div class="img-hover-zoom">
+											<a href="vegout.html"><div><img style="width:100%" src="images/vegoutindex.png"></div></a></div>
+											<div class="tag">product design</div>
+											<div class="tag">passion project</div>
+											<div class="tag">sept'19</div>
 
 
-						<!-- <div class="research iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pcnbc">
-				 			<a href="cnbc.html" ><img src="images/cnbctransparent.png" alt="Veg Out">
-				 			<div class="selectedprojects-des">
-								<h2 class="bold">CNBC</h2>
-								<h4>Client Project | UX Research</h4>
-							</div>
-							</a>
-						</div> -->
-						<div class="iso-box arvr col-lg-4 col-md-4 col-sm-4 col-xs-12" id="pgarden">
- 							<a href="garden.html" ><img src="images/veggardentransparent.png" alt="Veg Out">
- 							<div class="selectedprojects-des">
-								<h2 class="bold">Garden</h2>
-								<h4>Course Project | VR Design</h4>
-							</div>
-							</a>
-						</div>
-						<div class="iso-box arvr col-lg-4 col-md-4 col-sm-4 col-xs-12" id="pbrewery">
- 							<a href="brewary.html" ><img src="images/brewery.png" alt="Veg Out">
- 							<div class="selectedprojects-des">
-								<h2 class="bold">brewARy</h2>
-								<h4>Course Project | AR Design</h4>
-							</div>
-							</a>
-						</div>
-						<!-- <div class="design iso-box col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pgdesignchallenge">
- 							<a href="gintern.html" ><img src="images/google2transparent.png" alt="Veg Out">
- 							<div class="selectedprojects-des">
-								<h2 class="bold">UVENT</h2>
-								<h4>Design Challenge | Product Design</h4>
-							</div>
-							</a>
-						</div> -->
-						<!-- <div class="research iso-box col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pcomerica" onclick="location.href='comerica.html'">
- 							<a href="comerica.html" ><img src="images/comerica2transparent.png" alt="Veg Out">
- 							<div class="selectedprojects-des">
-								<h2 class="bold">COMERICA</h2>
-								<h4>Client Project | UX Research</h4>
-							</div>
-							</a>
-            </div> -->
-        	</div>
-				</div>
-			</div>
-		</div>
-	</div><br><br>
+										</div>
+									</div>
+
+									<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+
+										<div class="project">
+											<h1 class="number">02</h1>
+											<h1>PAWLS</h1>
+											<p>Helping Dogs & Their Owners Stay Together</p>
+											<!-- <div class="tag">interaction design</div>
+											<div class="tag">visual design</div> -->
+											<div class="img-hover-zoom">
+												<a href="pawls.html"><img style="width:100%" src="images/pawlsindex.png" alt="Veg Out"></a></div>
+											<div class="tag">product design</div>
+											<div class="tag">user research</div>
+											<div class="tag">oct-dec'19</div>
+										</div>
+									</div>
+								</div>
+
+
+									<div class="row">
+										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+											<div class="project">
+												<h1 class="number">03</h1>
+												<h1>LEXMARK</h1>
+												<p>Helping ServiceNow Service Now</p>
+												<div class="img-hover-zoom">
+												<a href="lexmark.html"><img style="width:100%" src="images/lexmarkindex.png">
+												</a>
+											</div>
+												<div class="tag">ux design</div>
+												<div class="tag">internship</div>
+												<div class="tag">may-aug'19</div>
+
+
+											</div>
+										</div>
+
+
+										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+
+											<div class="project">
+												<h1 class="number">04</h1>
+												<h1>VR GARDEN</h1>
+												<p>Educational virtual reality gardening app</p>
+
+												<div class="img-hover-zoom">
+													<a href="garden.html" ><img style="width:100%" src="images/gardenindex.png" alt="Veg Out"></a></div>
+												<div class="tag">virtual reality</div>
+												<div class="tag">course project</div>
+												<div class="tag">oct'19</div>
+											</div>
+										</div></div>
+
+
+
+										<!-- <div class="row">
+											<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+												<div class="project">
+													<h1 class="number">05</h1>
+													<h1>Helping People Reduce Their Meat Intake</h1>
+													<p>Using user-centered design and research approaches to help people change their habit</p>
+													<div class="img-hover-zoom">
+													<a href="brewary.html"><div><img style="width:100%" src="images/brewindex.png"></div></a></div>
+													<div class="tag">product design</div>
+													<div class="tag">passion project</div>
+
+												</div>
+											</div>
+
+											<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+
+
+											</div>
+										</div> -->
+
 </section>
 
-
-<section id="about">
+<!-- <section id="about">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 				<img src="images/me.jpg" width=100% alt="me at brooklyn">
 			</div>
-		<!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-			<h1 class="amiko" style= "text-align: center;">about</h1>
-		</div> -->
 		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 gelasio">
 			<h1 class="amiko">EDUCATION</h1>
 			<h2>University of Michigan - Ann Arbor</h2>
@@ -209,7 +212,7 @@
 		</div>
 		</div>
 	</div>
-</section>
+</section> -->
 
 <!-- footer section -->
 <footer>
