--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#work">Work</a></li>
-				<li><a href="#about">About</a></li>
+				<!-- <li><a href="#about">About</a></li> -->
 			</ul>
 		</div>
 	</div>
@@ -150,27 +150,6 @@
 											</div>
 										</div></div>
 
-
-
-										<!-- <div class="row">
-											<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-												<div class="project">
-													<h1 class="number">05</h1>
-													<h1>Helping People Reduce Their Meat Intake</h1>
-													<p>Using user-centered design and research approaches to help people change their habit</p>
-													<div class="img-hover-zoom">
-													<a href="brewary.html"><div><img style="width:100%" src="images/brewindex.png"></div></a></div>
-													<div class="tag">product design</div>
-													<div class="tag">passion project</div>
-
-												</div>
-											</div>
-
-											<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-
-
-											</div>
-										</div> -->
 
 </section>
 
