--- a/garden.html
+++ b/garden.html
@@ -53,8 +53,8 @@
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="index.html#work">Work</a></li>
-					<li><a href="index.html#about">About</a></li>
-					<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
+					<!-- <li><a href="index.html#about">About</a></li>
+					<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> --> -->
 				</ul>
 			</div>
 		</div>
@@ -250,7 +250,7 @@
 			 </section>
 
 
-								           
+
 <!-- JAVASCRIPT JS FILES -->
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
