--- a/lexmark.html
+++ b/lexmark.html
@@ -53,7 +53,7 @@
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="index.html#work">Work</a></li>
-					<li><a href="index.html#about">About</a></li>
+					<!-- <li><a href="index.html#about">About</a></li> -->
 					<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
 				</ul>
 			</div>
