--- a/about.html
+++ b/about.html
@@ -73,11 +73,11 @@
 	<div class="work">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h1>introduction<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">.</span></h1>
+				<h1>hello<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">!</span></h1>
 										</div>
 		<div class="row">
 		<div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
-										<img src="images/intro.png" class="img-responsive" style="width:100%">
+										<!-- <img src="images/intro.png" class="img-responsive" style="width:100%"> -->
 									</div>
 
 
@@ -90,43 +90,20 @@
 	<section class="work">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h1>selected projects<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">.
+				<h1>fun<span style="color:#F65846; font-family: 'Amiko', sans-serif;">.
 					</span>
 					</h1>
 				</div>
 			</div>
 								<div class="row">
 									<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-										<div class="project">
-											<h1 class="number">01</h1>
-											<h1 style="font-family: 'Roboto', sans-serif;;">Helping People Eat Less Meat</h1>
-											<div class="tag">PRODUCT DESIGN</div>
-											<div class="tag">PASSION PROJECT</div>
-											<div class="tag">2019</div>
-											<div class="img-hover-zoom">
-												<a href="vegout.html">
-													<div>
-														<img style="width:100%" src="images/vegoutindex.png">
-													</div>
-												</a>
-											</div>
+
 										</div>
 									</div>
 
 									<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
-										<div class="project">
-											<h1 class="number">02</h1>
 
-											<h1 style="font-family: 'Roboto', sans-serif;">Helping ServiceNow Service Now</h1>
-											<div class="tag">INTERNSHIP</div>
-											<div class="tag">UX DESIGN</div>
-											<div class="tag">2019</div>
-											<div class="img-hover-zoom">
-											<a href="lexmark.html"><img style="width:100%" src="images/lexmarkindex.png">
-											</a>
-												</div>
-									</div>
 								</div>
 							</div>
 
@@ -134,40 +111,21 @@
 									<div class="row">
 										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 											<div class="project">
-												<h1 class="number">03</h1>
-												<h1 style="font-family: 'Roboto', sans-serif;">Decreasing Disruptive Barking</h1>
-													<div class="tag">PERVASIVE COMPUTING</div>
-													<div class="tag">USER RESEARCH</div>
-													<div class="tag">2019</div>
-										<div class="img-hover-zoom">
-											<a href="pawls.html"><img style="width:100%" src="images/pawlsindex.png" alt="Veg Out"></a>
 
-
-											</div>
 											</div>
 										</div>
 
 
 										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
-											<div class="project">
-												<h1 class="number">04</h1>
-													<h1 style="font-family: 'Roboto', sans-serif;">Educational VR Gardening App</h1>
 
-												<div class="tag">VIRTUAL REALITY</div>
-												<div class="tag">COURSE PROJECT</div>
-												<div class="tag">2019</div>
-												<div class="img-hover-zoom">
-													<a href="garden.html" ><img style="width:100%" src="images/gardenindex.png" alt="Veg Out"></a></div>
-											</div>
-										</div>
 									</div>
 									</div>
 
 
 </section>
 
-<!-- <section id="about">
+<section id="about">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -205,7 +163,7 @@
 		</div>
 		</div>
 	</div>
-</section> -->
+</section>
 
 <!-- footer section -->
 <footer>
