--- a/lexmark.html
+++ b/lexmark.html
@@ -48,13 +48,14 @@
 					<span class="icon icon-bar"></span>
 					<span class="icon icon-bar"></span>
 				</button>
-				<a href="index.html" class="navbar-brand">MICHELLE KIM</a>
+				<a href="index.html" class="navbar-brand logo"><class="bold">M</a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html#work">Work</a></li>
-					<!-- <li><a href="index.html#about">About</a></li> -->
-					<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
+					<li class="nav-menu-item"><a href="index.html">WORK</a></li>
+					 <li class="nav-menu-item"><a href="about.html">ABOUT</a></li>
+					 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf">RESUME</a></li>
+
 				</ul>
 			</div>
 		</div>
